{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 194,
  "lineage": "6dd600de-50a9-0cc7-90fc-935bdf27b387",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:626635432139:loadbalancer/app/Demo-ALBapplication-alb/f06160afc2798ee9",
            "arn_suffix": "app/Demo-ALBapplication-alb/f06160afc2798ee9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Demo-ALBapplication-alb-49566131.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:626635432139:loadbalancer/app/Demo-ALBapplication-alb/f06160afc2798ee9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Demo-ALBapplication-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0122913220a644446"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04a6625784d7206f5"
              },
              {
                "subnet_id": "subnet-0af1fe13ecc00aaca"
              }
            ],
            "subnets": [
              "subnet-04a6625784d7206f5",
              "subnet-0af1fe13ecc00aaca"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Demo-ALBapplication-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Demo-ALBapplication-alb"
            },
            "vpc_id": "vpc-0343daaae8b2e919b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.sg_a.aws_security_group.alb_sg",
            "module.vpc_a.aws_subnet.public_subnet_1",
            "module.vpc_a.aws_subnet.public_subnet_2",
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:626635432139:listener/app/Demo-ALBapplication-alb/f06160afc2798ee9/7ae290b75f6f5b60",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:626635432139:targetgroup/Demo-ALB-main-tg/d33d591dc3fdc332",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:626635432139:listener/app/Demo-ALBapplication-alb/f06160afc2798ee9/7ae290b75f6f5b60",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:626635432139:loadbalancer/app/Demo-ALBapplication-alb/f06160afc2798ee9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.main",
            "module.sg_a.aws_security_group.alb_sg",
            "module.vpc_a.aws_subnet.public_subnet_1",
            "module.vpc_a.aws_subnet.public_subnet_2",
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "register_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:626635432139:targetgroup/Demo-ALB-register-tg/2dcc858276215cc0",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:626635432139:listener-rule/app/Demo-ALBapplication-alb/f06160afc2798ee9/7ae290b75f6f5b60/4cd9e0ced4bba747",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/register*",
                      "/register/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:626635432139:listener-rule/app/Demo-ALBapplication-alb/f06160afc2798ee9/7ae290b75f6f5b60/4cd9e0ced4bba747",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:626635432139:listener/app/Demo-ALBapplication-alb/f06160afc2798ee9/7ae290b75f6f5b60",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_lb_target_group.register",
            "module.sg_a.aws_security_group.alb_sg",
            "module.vpc_a.aws_subnet.public_subnet_1",
            "module.vpc_a.aws_subnet.public_subnet_2",
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:626635432139:targetgroup/Demo-ALB-main-tg/d33d591dc3fdc332",
            "arn_suffix": "targetgroup/Demo-ALB-main-tg/d33d591dc3fdc332",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 6,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:626635432139:targetgroup/Demo-ALB-main-tg/d33d591dc3fdc332",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Demo-ALB-main-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Demo-ALB-main-tg"
            },
            "tags_all": {
              "Name": "Demo-ALB-main-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0343daaae8b2e919b"
          },
          "dependencies": [
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "register",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:626635432139:targetgroup/Demo-ALB-register-tg/2dcc858276215cc0",
            "arn_suffix": "targetgroup/Demo-ALB-register-tg/2dcc858276215cc0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 6,
                "matcher": "200",
                "path": "/register/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:626635432139:targetgroup/Demo-ALB-register-tg/2dcc858276215cc0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Demo-ALB-register-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Demo-ALB-register-tg"
            },
            "tags_all": {
              "Name": "Demo-ALB-register-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0343daaae8b2e919b"
          },
          "dependencies": [
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "main_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main_instance_1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:626635432139:targetgroup/Demo-ALB-main-tg/d33d591dc3fdc332-20250205174722196100000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:626635432139:targetgroup/Demo-ALB-main-tg/d33d591dc3fdc332",
            "target_id": "i-0ddfce67bfedea8e4"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.main",
            "module.ec2_a.aws_instance.public_instance",
            "module.ec2_a.data.aws_ami.latest_ubuntu",
            "module.ec2_b.aws_instance.public_instance",
            "module.ec2_b.data.aws_ami.latest_ubuntu",
            "module.sg_a.aws_security_group.alb_sg",
            "module.sg_a.aws_security_group.ec2_sg",
            "module.vpc_a.aws_subnet.public_subnet_1",
            "module.vpc_a.aws_subnet.public_subnet_2",
            "module.vpc_a.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "main_instance_2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:626635432139:targetgroup/Demo-ALB-main-tg/d33d591dc3fdc332-20250205174723071200000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:626635432139:targetgroup/Demo-ALB-main-tg/d33d591dc3fdc332",
            "target_id": "i-046ee64a18ee2ad4a"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.main",
            "module.ec2_a.aws_instance.public_instance",
            "module.ec2_a.data.aws_ami.latest_ubuntu",
            "module.ec2_b.aws_instance.public_instance",
            "module.ec2_b.data.aws_ami.latest_ubuntu",
            "module.sg_a.aws_security_group.alb_sg",
            "module.sg_a.aws_security_group.ec2_sg",
            "module.vpc_a.aws_subnet.public_subnet_1",
            "module.vpc_a.aws_subnet.public_subnet_2",
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "register_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "register_instance_1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:626635432139:targetgroup/Demo-ALB-register-tg/2dcc858276215cc0-20250205174722632400000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:626635432139:targetgroup/Demo-ALB-register-tg/2dcc858276215cc0",
            "target_id": "i-046ee64a18ee2ad4a"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.register",
            "module.ec2_b.aws_instance.public_instance",
            "module.ec2_b.data.aws_ami.latest_ubuntu",
            "module.sg_a.aws_security_group.alb_sg",
            "module.sg_a.aws_security_group.ec2_sg",
            "module.vpc_a.aws_subnet.public_subnet_2",
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_a",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1bed4f06a3b463d",
            "arn": "arn:aws:ec2:us-east-1:626635432139:instance/i-0ddfce67bfedea8e4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ddfce67bfedea8e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linux-alb",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eb4991e75f2e9a31",
            "private_dns": "ip-172-16-1-42.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.42",
            "public_ip": "44.193.220.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09dcb6d9aa2c2bdce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01af23d9be48cab04"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0af1fe13ecc00aaca",
            "tags": {
              "Environment": "dev_a",
              "Name": "Demo-ALB-Public-Instance-subnet-0af1fe13ecc00aaca"
            },
            "tags_all": {
              "Environment": "dev_a",
              "Name": "Demo-ALB-Public-Instance-subnet-0af1fe13ecc00aaca"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01af23d9be48cab04"
            ]
          },
          "dependencies": [
            "module.ec2_a.data.aws_ami.latest_ubuntu",
            "module.sg_a.aws_security_group.alb_sg",
            "module.sg_a.aws_security_group.ec2_sg",
            "module.vpc_a.aws_subnet.public_subnet_1",
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_b",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1bed4f06a3b463d",
            "arn": "arn:aws:ec2:us-east-1:626635432139:instance/i-046ee64a18ee2ad4a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-046ee64a18ee2ad4a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linux-alb",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a882b83bc3ecd808",
            "private_dns": "ip-172-16-3-197.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.3.197",
            "public_ip": "44.203.251.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-021bede7a2bcc867b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01af23d9be48cab04"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a6625784d7206f5",
            "tags": {
              "Environment": "dev_a",
              "Name": "Demo-ALB-Public-Instance-subnet-04a6625784d7206f5"
            },
            "tags_all": {
              "Environment": "dev_a",
              "Name": "Demo-ALB-Public-Instance-subnet-04a6625784d7206f5"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01af23d9be48cab04"
            ]
          },
          "dependencies": [
            "module.ec2_b.data.aws_ami.latest_ubuntu",
            "module.sg_a.aws_security_group.alb_sg",
            "module.sg_a.aws_security_group.ec2_sg",
            "module.vpc_a.aws_subnet.public_subnet_2",
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_a",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635432139:security-group/sg-0122913220a644446",
            "description": "Allow traffic from ALB to EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0122913220a644446",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Demo-ALB-alb-sg",
            "name_prefix": "",
            "owner_id": "626635432139",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Demo-ALB-alb-sg"
            },
            "tags_all": {
              "Name": "Demo-ALB-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0343daaae8b2e919b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_a",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635432139:security-group/sg-01af23d9be48cab04",
            "description": "Allow inbound traffic from ALB to EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01af23d9be48cab04",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0122913220a644446"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Demo-ALB-ec2-sg",
            "name_prefix": "",
            "owner_id": "626635432139",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Demo-ALB-ec2-sg"
            },
            "tags_all": {
              "Name": "Demo-ALB-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0343daaae8b2e919b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_a.aws_security_group.alb_sg",
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "data",
      "type": "aws_route_table",
      "name": "default_main_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635432139:route-table/rtb-09451cc12b71be4ba",
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-0dd70629cf74bd090",
                "route_table_id": "rtb-09451cc12b71be4ba",
                "subnet_id": ""
              }
            ],
            "filter": [
              {
                "name": "association.main",
                "values": [
                  "true"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-09451cc12b71be4ba",
            "owner_id": "626635432139",
            "route_table_id": "rtb-09451cc12b71be4ba",
            "routes": [],
            "subnet_id": null,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0343daaae8b2e919b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635432139:internet-gateway/igw-01d125d121aaf5dc2",
            "id": "igw-01d125d121aaf5dc2",
            "owner_id": "626635432139",
            "tags": {
              "Name": "Demo-ALB-vpc-dev_a-igw"
            },
            "tags_all": {
              "Name": "Demo-ALB-vpc-dev_a-igw"
            },
            "vpc_id": "vpc-0343daaae8b2e919b"
          },
          "dependencies": [
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01d125d121aaf5dc2",
            "id": "r-rtb-0804555040617c7d61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0804555040617c7d6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_a.aws_internet_gateway.igw",
            "module.vpc_a.aws_route_table.public_route_table",
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635432139:route-table/rtb-06b72171d09c17280",
            "id": "rtb-06b72171d09c17280",
            "owner_id": "626635432139",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Demo-ALB-vpc-dev_a-private-rt"
            },
            "tags_all": {
              "Name": "Demo-ALB-vpc-dev_a-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0343daaae8b2e919b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635432139:route-table/rtb-0804555040617c7d6",
            "id": "rtb-0804555040617c7d6",
            "owner_id": "626635432139",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Demo-ALB-vpc-dev_a-public-rt"
            },
            "tags_all": {
              "Name": "Demo-ALB-vpc-dev_a-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0343daaae8b2e919b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2965ccfc218c5ec",
            "route_table_id": "rtb-0804555040617c7d6",
            "subnet_id": "subnet-0af1fe13ecc00aaca"
          },
          "dependencies": [
            "module.vpc_a.aws_route_table.public_route_table",
            "module.vpc_a.aws_subnet.public_subnet_1",
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037943d1523ef449e",
            "route_table_id": "rtb-0804555040617c7d6",
            "subnet_id": "subnet-04a6625784d7206f5"
          },
          "dependencies": [
            "module.vpc_a.aws_route_table.public_route_table",
            "module.vpc_a.aws_subnet.public_subnet_2",
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635432139:subnet/subnet-0af2efb0a9826b05c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af2efb0a9826b05c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "626635432139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Demo-ALB-private-subnet-1-dev_a-us-east-1"
            },
            "tags_all": {
              "Name": "Demo-ALB-private-subnet-1-dev_a-us-east-1"
            },
            "vpc_id": "vpc-0343daaae8b2e919b"
          },
          "dependencies": [
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635432139:subnet/subnet-06e60c241c4a60273",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e60c241c4a60273",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "626635432139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Demo-ALB-private-subnet-2-dev_a-us-east-1"
            },
            "tags_all": {
              "Name": "Demo-ALB-private-subnet-2-dev_a-us-east-1"
            },
            "vpc_id": "vpc-0343daaae8b2e919b"
          },
          "dependencies": [
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635432139:subnet/subnet-0af1fe13ecc00aaca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af1fe13ecc00aaca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "626635432139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Demo-ALB-public-subnet-1-dev_a-us-east-1"
            },
            "tags_all": {
              "Name": "Demo-ALB-public-subnet-1-dev_a-us-east-1"
            },
            "vpc_id": "vpc-0343daaae8b2e919b"
          },
          "dependencies": [
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635432139:subnet/subnet-04a6625784d7206f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a6625784d7206f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "626635432139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Demo-ALB-public-subnet-2-dev_a-us-east-1"
            },
            "tags_all": {
              "Name": "Demo-ALB-public-subnet-2-dev_a-us-east-1"
            },
            "vpc_id": "vpc-0343daaae8b2e919b"
          },
          "dependencies": [
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635432139:vpc/vpc-0343daaae8b2e919b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0bd9ab00cc45af414",
            "default_route_table_id": "rtb-09451cc12b71be4ba",
            "default_security_group_id": "sg-08e938acefb3695a9",
            "dhcp_options_id": "dopt-07281a4338b8ef754",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0343daaae8b2e919b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09451cc12b71be4ba",
            "owner_id": "626635432139",
            "tags": {
              "Name": "Demo-ALBvpc_dev_a_us-east-1"
            },
            "tags_all": {
              "Name": "Demo-ALBvpc_dev_a_us-east-1"
            }
          }
        }
      ]
    }
  ]
}